--- a/src/App.scss
+++ b/src/App.scss
@@ -17,6 +17,13 @@
   color: #61dafb;
 }
 
+h1{
+  padding-top: 20px;
+  font-family: monospace;
+  font-size: 42px;
+  text-shadow: 1px 1px 2px black;
+}
+
 .board {
   width: 500px;
   height: 500px;
